# Overdrive

./: JOURNAL.md  README.md  pyproject.toml
C++/RP2350/: platformio.ini
C++/RP2350/include/: motor.hpp
C++/RP2350/src/: main.cpp  motor.cpp
src/: convertModel.py  main.py  motor.py  sensorTest.py
