[project]
name = "megalithium"
version = "0.1.0"
description = "Robot Code for the MegaLithium 2.0 Rescue Line Team for RoboCupJunior Robotics Competition."
authors = [
    {name = "megalithium20",email = "megalithium2.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
