[project]
name = "megalithium"
version = "0.1.0"
description = "Source code for team MegaLithium2.0 for Rescue Line RobocupJunior Robotics Competition."
authors = [
    {name = "megalithium20",email = "megalithium2.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
opencv-python = {version = "^4.12.0.88", markers = "sys_platform == 'darwin'"}
numpy = {version = "^2.2.6", markers = "sys_platform == 'darwin'"}
traitlets = {version = "^5.14.0", markers = "sys_platform == 'darwin'"}
ultralytics = {version = "8.3.181", markers = "sys_platform == 'darwin'"}
jetcam = {git = "https://github.com/NVIDIA-AI-IOT/jetcam", branch="master", markers = "sys_platform == 'darwin'"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
